--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -10,7 +10,7 @@
     <ul>
         @foreach (var item in Model)
         {
-            <li></li>
+            <li>item.Description</li>
             <a asp-action="delete" asp-route-id="">delete</a>
         }
     </ul>
