--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -10,8 +10,10 @@
     <ul>
         @foreach (var item in Model)
         {
-            <li>item.Description</li>
+        <li>
+            item.Description
             <a asp-action="delete" asp-route-id="">delete</a>
+        </li>
         }
     </ul>
 
