--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -7,13 +7,13 @@
 
     <h1>Wishlist</h1>
     <a asp-action="create">Add item</a>
-    <ul>
-        @foreach (var item in Model)
-        {
-        <li>
-            item.Description
-            <a asp-action="delete" asp-route-id="">delete</a>
-        </li>
-        }
-    </ul>
+
+            <ul>
+                @foreach (var item in Model)
+                {
+                    <li>@item.Description <a asp-action="delete" asp-route-id="@item.Id">delete</a></li>
+                }
+            </ul>
+
+
 
